--- a/public/web/style.css
+++ b/public/web/style.css
@@ -22,20 +22,32 @@ body.ticketbody{
 }
 
 nav{
-    height: 60px;
+    height: 300px;
+    background-image: url(/img/banner.jpg);
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 32px;
+    font-size: 60px;
     font-weight: 600;
+    background-size: cover;
+    background-position: center;
+    color: white;
 }
 
 section.main, section.event-details, section.ticket{
     position: relative;
     padding: 0 24px;
     width: 100%;
-    max-width: 600px;
+    max-width: 1200px;
     margin: 0 auto;
+}
+
+section.event-details{
+    max-width: 1000px;
+}
+
+section.ticket{
+    max-width: 600px;
 }
 
 h2{
@@ -44,25 +56,25 @@ h2{
 
 .event-list{
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 24px;
+    margin-bottom: 24px;
 }
 
 .event-list .event{
     display: flex;
-    /* box-shadow: rgb(0 0 0 / 20%) 0px 3px 1px -2px, rgb(0 0 0 / 14%) 0px 2px 2px 0px, rgb(0 0 0 / 12%) 0px 1px 5px 0px; */
-    box-shadow: 0px 0px 10px -5px rgba(0,0,0,0.75);
-    margin-bottom: 16px;
-    border-radius: 8px;
     cursor: pointer;
-    overflow: hidden;
+    flex-direction: column;
+    width: calc(33.33% - 24px);
+    flex: 0 0 calc(33.33% - 24px);
 }
 
 .event-list .event .banner{
     display: flex;
-    min-height: 120px;
+    height: 290px;
     background-size: cover;
     background-position: center;
-    flex: 0 0 120px;
+    flex: 0 0 210px;
     overflow: hidden;
 }
 
@@ -71,6 +83,12 @@ h2{
     flex-direction: column;
     padding: 12px 16px;
     justify-content: center;
+    width: 90%;
+    box-shadow: 0px 0px 10px -5px rgb(0 0 0 / 75%);
+    margin: 0 auto;
+    margin-top: -60px;
+    background-color: white;
+    border-radius: 4px;
 }
 
 .event-list .event .details h3{
@@ -134,6 +152,14 @@ h2{
     padding-bottom: 100px;
 }
 
+.event-details .banner{
+    max-height: 300px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .event-details section.main .location{
     display: flex;
     margin-bottom: 16px;
@@ -184,11 +210,12 @@ h2{
 
 .buy{
     width: 100%;
-    position: fixed;
+    position: sticky;
     bottom: 0;
     padding: 24px;
     background-color: white;
-    max-width: 600px;
+    max-width: 1200px;
+    text-align: center;
 }
 
 .buy button{
@@ -200,6 +227,7 @@ h2{
     font-size: 22px;
     padding: 12px;
     cursor: pointer;
+    max-width: 540px;
 }
 
 .ticket{
