--- a/public/web/style.css
+++ b/public/web/style.css
@@ -23,7 +23,7 @@ body.ticketbody{
 
 nav{
     height: 300px;
-    background-image: url(/img/banner.jpg);
+    background-image: url(/img/red-banner.jpg);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -32,6 +32,21 @@ nav{
     background-size: cover;
     background-position: center;
     color: white;
+    position: relative;
+}
+
+nav:before{
+    content: '';
+    background-color: rgba(255, 255, 255, 0.75);
+    height: 80px;
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+nav span{
+    z-index: 1;
 }
 
 section.main, section.event-details, section.ticket{
@@ -67,6 +82,20 @@ h2{
     flex-direction: column;
     width: calc(33.33% - 24px);
     flex: 0 0 calc(33.33% - 24px);
+}
+
+@media (max-width: 992px){
+    .event-list .event{
+        width: calc(50% - 24px);
+        flex: 0 0 calc(50% - 24px);
+    }
+}
+
+@media (max-width: 600px){
+    .event-list .event{
+        width: 100%;
+        flex: 0 0 100%;
+    }
 }
 
 .event-list .event .banner{
